[package]
name = "acore"
version = "0.1.0"
authors = ["equation314 <equation618@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
spin = "0.6"
bitflags = "1.2"
buddy_system_allocator = "0.5.0"
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator", rev = "03bd9909" }
lazy_static = { version = "1.4", features = ["spin_no_std"] }

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", rev = "21e32ee" }
